--- a/notebooks/01.download_dataset.ipynb
+++ b/notebooks/01.download_dataset.ipynb
@@ -3,17 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b70d7e2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5813aab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2f205683",
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "232ececb",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -59,11 +53,11 @@
       "Requirement already satisfied: kaggle in c:\\users\\amalsha\\appdata\\roaming\\python\\python39\\site-packages (1.5.13)\n",
       "Requirement already satisfied: python-dateutil in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (2.8.2)\n",
       "Requirement already satisfied: tqdm in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (4.64.1)\n",
-      "Requirement already satisfied: urllib3 in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (1.26.11)\n",
-      "Requirement already satisfied: requests in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (2.28.1)\n",
       "Requirement already satisfied: certifi in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (2022.9.14)\n",
-      "Requirement already satisfied: six>=1.10 in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (1.16.0)\n",
       "Requirement already satisfied: python-slugify in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (5.0.2)\n",
+      "Requirement already satisfied: urllib3 in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (1.26.11)\n",
+      "Requirement already satisfied: six>=1.10 in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (1.16.0)\n",
+      "Requirement already satisfied: requests in c:\\programdata\\anaconda3\\lib\\site-packages (from kaggle) (2.28.1)\n",
       "Requirement already satisfied: text-unidecode>=1.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-slugify->kaggle) (1.3)\n",
       "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->kaggle) (2.0.4)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->kaggle) (3.3)\n",
@@ -78,23 +72,18 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "852347f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.environ['KAGGLE_USERNAME'] = data['username']\n",
-    "\n",
     "os.environ['KAGGLE_KEY'] = data['key']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "288a791e",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from kaggle.api.kaggle_api_extended import KaggleApi\n",
@@ -105,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "96a5e2a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,11 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4497db4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#unzip dataset\n",
     "import zipfile\n",
     "with zipfile.ZipFile('../artifacts/sentiment-analysis-dataset.zip', 'r') as zip_ref:\n",
     "    zip_ref.extractall('../artifacts/')"
@@ -128,7 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83a27895",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -154,5 +139,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
